public class EndOfStoryException extends RuntimeException {
    public EndOfStoryException(){
        super("Тут и сказочки конец");
    }
}
