public class NoNameException extends Exception {
    public NoNameException(){
        super("У всех должно быть имя");
    }
}
