@startuml

title __KARLSON2's Class Diagram__\n

  package  {
    class EndOfStoryException {
    }
  }
  

  package  {
    interface Helicopter {
    }
  }
  

  package  {
    class Hero {
    }
  }
  

  package  {
    class Karlson {
    }
  }
  

  package  {
    class Main {
    }
  }
  

  package  {
    class NoNameException {
    }
  }
  

  package  {
    abstract class People {
    }
  }
  

  package  {
    interface Person {
    }
  }
  

  package  {
    enum State {
    }
  }
  

  package  {
    class Task {
    }
  }
  

  Hero -up-|> People
  Karlson -up-|> Person
  Karlson -up-|> Helicopter
  Karlson o-- State : state
  People -up-|> Person


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
